Crossfilter: Fix result text alignment

--- a/crossfilter_example/worm_filter_new.css
+++ b/crossfilter_example/worm_filter_new.css
@@ -132,12 +132,12 @@ h2 {
     width: 100px;
     text-align: left;
 }
-#results-list div.origin {
-    width: 50px;
+#results-list div.display_field1 {
+    width: 60px;
     text-align: right;
     padding-right: 15px;
 }
-#results-list div.destination {
+#results-list div.display_field2 {
     width: 100px;
     text-align: left;
     padding-left: 15px;
